# PARPLEXITY

./: .gitignore  .replit  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--PHASE-11-Citation-Formatting-Export-Complete-Implement_1772500438773.txt  Pasted-Prompt-for-an-AI-coding-agent-Phase-6-Trust-Quality-cit_1772317394567.txt
backend/: DEVELOPER_REFERENCE.md  README.md  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/services/answer/: __init__.py  context_packer.py  openai_answerer.py
backend/app/services/chunking/: __init__.py  chunker_v1.py  pdf_chunker.py
backend/app/services/citation/: formatter.py
backend/app/services/classification/: __init__.py  source_classifier.py
backend/app/services/evidence/: __init__.py  evidence_builder.py
backend/app/services/extract/: __init__.py  pdf_extractor.py  readability_extractor.py
backend/app/services/fetch/: __init__.py  http_fetcher.py
backend/app/services/metadata/: __init__.py  crossref_client.py
backend/app/services/quality/: __init__.py  citation_enforcer.py  claim_parser.py  confidence.py  contradiction.py  quote_verifier.py  support_verifier.py
backend/app/services/retrieval/: __init__.py  keyword_retriever_v1.py
backend/app/services/scoring/: __init__.py  authority_scorer.py
backend/app/services/search/: __init__.py  duckduckgo.py  exceptions.py  fallback_providers.py  search_facade.py
