[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.134.0",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "readability-lxml>=0.8.4.1",
    "uvicorn[standard]>=0.41.0",
]
